2005-02-03  Albert Chu  <chu11@llnl.gov>

	* tagged pre_dist2_err_msg_cleanup

	* dist/dist2: Cleaned up error message output.
	
	* tagged post_dist2_err_msg_cleanup

2005-01-10  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/hostlist.h, src/libgendersllnl/hostlist.c:
	Updated libraries.

        * src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am: Cleanup.

        * gendersllnl.spec.in: Fix a Perl Extensions packaging problem for
	multilib systems.

        * src/libgendersllnl/Makefile.am, configure.ac: Move versioning
	info into configure.ac.

        * configure.ac: Added Perl versioning.

        * src/Libgendersllnl/Libgendersllnl.pm: Renamed to
	Libgendersllnl.pm.in and added versioning.

        * src/Gendersllnl/Gendersllnl.pm: Renamed to Gendersllnl.pm.in and
	added versioning.
	
2005-01-05  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (emit_definition, participating_nodes, usage): Revert
	behavior of -l option (i.e. dist_local) back to the
	gendersllnl-1-5-2 behavior.  Changed the -L option to -H option. A
	new -L option runs rdist on the localhost without a network
	connection.

	* man/dist/dist2.1, man/dist/dist_local.1: Fix for modifications
	in behavior.

	* META: Updated for new release

	* tagged gendersllnl-1-6-0-pre2
	
2005-01-03  Albert Chu  <chu11@llnl.gov>
	
	* tagged gendersllnl-1-6-0-pre1

2004-12-29  Albert Chu  <chu11@llnl.gov>

	* Makefile.am: distcheck fix.
	
2004-12-20  Albert Chu  <chu11@llnl.gov>

	* dist/dist2 (emit_definition, usage, participating_nodes): Added
	-L option.

	* man/dist/dist2.1: Documented -L option and -c option.

2004-12-18  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in, configure.ac, compat/Makefile.am,
	src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am: Fix
	make install corner case.

	* dist/dist2 (emit_definition): Force rdist to run on localhost when
	-l option is used.

	* dist/dist2: Fix "local_clister" variable name typo.
	
2004-12-14  Albert Chu  <chu11@llnl.gov>
