@@ -1,16 +1,0 @@
-#!/bin/sh
-##
-# $Id: bootstrap,v 1.3 2003-08-19 23:07:58 achu Exp $
-##
-
-echo "running aclocal ... "
-aclocal -I config
-echo "running libtoolize ... "
-libtoolize --automake --copy 
-echo "running autoheader ... "
-autoheader
-echo "running automake ... "
-automake --copy --add-missing 
-echo "running autoconf ... "
-autoconf
-echo "now run ./configure to configure gendersllnl for your environment."
