@@ -3,13 +3,9 @@ use ExtUtils::MakeMaker;
 # the contents of the Makefile that is written.
 WriteMakefile(
     'NAME'		=> 'Gendersllnl',
-    'VERSION_FROM'	=> 'Gendersllnl.pm', # finds $VERSION
-    'PREREQ_PM'		=> {}, # e.g., Module::Name => 1.1
-    ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
-      (ABSTRACT_FROM => 'Gendersllnl.pm', # retrieve abstract from module
-       AUTHOR     => 'A. U. Thor <a.u.thor@a.galaxy.far.far.away>') : ()),
-    'LIBS'		=> [''], # e.g., '-lm'
-    'DEFINE'		=> '', # e.g., '-DHAVE_SOMETHING'
-	# Insert -I. if you add *.h files later:
-    'INC'		=> '', # e.g., '-I/usr/include/other'
+    'VERSION_FROM'	=> 'Gendersllnl.pm',
+    'PREREQ_PM'		=> {},
+    ($] >= 5.005 ?
+      (ABSTRACT_FROM => 'Gendersllnl.pm',
+       AUTHOR     => 'Albert Chu <chu11@llnl.gov>') : ()),
 );
