@@ -3,15 +3,9 @@ use ExtUtils::MakeMaker;
 # the contents of the Makefile that is written.
 WriteMakefile(
     'NAME'		=> 'Libgendersllnl',
-    'VERSION_FROM'	=> 'Libgendersllnl.pm', # finds $VERSION
-    'PREREQ_PM'		=> {}, # e.g., Module::Name => 1.1
-    ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
-      (ABSTRACT_FROM => 'Libgendersllnl.pm', # retrieve abstract from module
+    'VERSION_FROM'	=> 'Libgendersllnl.pm',
+    'PREREQ_PM'		=> {},
+    ($] >= 5.005 ?
+      (ABSTRACT_FROM => 'Libgendersllnl.pm',
        AUTHOR     => 'Albert Chu <chu11@llnl.gov>') : ()),
-    'LIBS'		=> ['-lgenders'], # e.g., '-lm'
-    'DEFINE'		=> '', # e.g., '-DHAVE_SOMETHING'
-	# Insert -I. if you add *.h files later:
-    'INC'		=> '', # e.g., '-I/usr/include/other'
-        # Un-comment this if you add C files to link with later:
-    'OBJECT'=> '$(O_FILES)', # link all the C files too
 );
