@@ -1,3 +1,7 @@
+2005-04-19  Albert Chu  <chu11@llnl.gov>
+	 
+        * Autoconf, Makefile, Built cleanup.
+	 
 2005-02-03  Albert Chu  <chu11@llnl.gov>
 
 	* tagged pre_dist2_err_msg_cleanup
